# haritorax-slimevr-bridge

./: Cargo.toml  LICENSE  README.md
src/: bluetooth.rs  handler.rs  haritora.rs  main.rs  manager.rs  slimevr.rs  utils.rs
src/constants/: characteristics.rs  constants.rs  mod.rs  services.rs
src/math/: gravity.rs  mod.rs  rotation.rs
