[package]
name = "slimevr-proto-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
btleplug = { version = "0.11.3", features = ["serde"] }
byteorder = "1.5.0"
futures = "0.3.29"
futures-util = "0.3.29"
nalgebra = "0.32.3"
rand = "0.8.5"
tokio = { version = "1.35.0", features = ["full"] }
uuid = "1.6.1"
num_enum = "0.7.1"
